test/fails/bad_functions/attributes4.lgl
void main(uniform int x) { // Attributes must be in {vec | mat}
    return;
}